# mithrandir

./: .coveragerc  .gitignore  README.md  SUMMARY.md  pyproject.toml  scripts.py  why.md
mithrandir/: __init__.py  box.py  monad.py  op.py  operators.py  utils.py
mithrandir/Complex/: Connectable.py  __init__.py
tests/: conftest.py  test_async.py  test_box.py  test_mithrandir.py  test_monad.py  test_monad_validator.py  test_operator_overload.py
