[tool.poetry]
name = "mithrandir"
version = "0.1.0"
description = ""
authors = ["vutr <me@vutr.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jedi = "^0.17.2"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
