[tool.poetry]
name = "mithrandir"
version = "1.1.1"
description = ""
authors = ["vutr <me@vutr.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jedi = "^0.17.2"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
pydantic = "^1.6.1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
test = 'scripts:test'
lint = 'scripts:lint'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
